--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ FORGE_API_KEY="your-forge-api-key-here"
 FORGE_BASE_URL="https://api.forge.tensorblock.co/v1"
 MODEL="OpenAI/gpt-4.1"
 AI_TEMPERATURE=0.7
+
+
+GITHUB_TOKEN=ghp_your_token_here
